Final fix for the z-index

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -26,7 +26,7 @@
     max-width: 380px;
     height: max-content;
     max-height: 900px;
-    margin-left: -140px;
+    margin-left: -160px;
 }
 
 .header {
